# CustomBoardGamesApplication

./: CMakeLists.txt  LICENSE  Pyramic_Tic-Tac-Toe.h  README.md  Ultimate_Tic-Tac-Toe.h  Word_Tic-Tac-Toe.h  main.cpp
AssignmentDemo_WithBouns/: 3x3X_O.h
BoardGame_1/: Pyramic Tic-Tac-Toe.h
BoardGame_2/: Four_in_a_Row.h  MinMax_FourInRow.h
BoardGame_3/: 5x5X_O.h
BoardGame_4/: Word_Tic-Tac-Toe.h
BoardGame_5/: MinMax_NumericalTicTacToe.h  Numerical_Tic_Tac_Toe.h
BoardGame_6/: Inverse3_3_X_O.h
BoardGame_7/: FourByFourTicTacToe.h
BoardGame_8/: Edited_3x3_XO.h  Ultimate_Tic-Tac-Toe.h
BoardGamesGUI/BoardGames/BoardGames/: CMakeLists.txt  Release_StandAlone.bat
BoardGamesGUI/BoardGames/BoardGames/Release/: imgui.ini
BoardGamesGUI/BoardGames/BoardGames/include/glad/: glad.h
BoardGamesGUI/BoardGames/BoardGames/src/: BoardGamesGUI.cpp  BoardGamesGUI.h  glad.c  main.cpp
BoardGamesGUI/BoardGames/BoardGames/src/GameLogic/: BoardGame7_Wrapper.h  BoardGame_Classes.h  Edited_3x3_XO.h  FourByFourTicTacToe.h  UltimateTTT_Wrapper.h  Ultimate_Tic-Tac-Toe.h
Markgames/: 3x3X_O.h  Ultimate_Tic-Tac-Toe.h  Word_Tic-Tac-Toe.h  main.cpp
Setup_games/: games.h
c++_CLI_WrapperClass/: CustomBoardGamesApplicationLogicWrapping.cpp  CustomBoardGamesApplicationLogicWrapping.h
